--- a/todo.org
+++ b/todo.org
@@ -4,7 +4,10 @@
    STATUS: Should be fixed now, but not 100% sure. \\
    Well the threading solution didn't work. \\
    Actually I think it did? Welp.
-* IRC [2/2]
+* IRC [2/3]
+** TODO Fix unicode symbols being chopped up
+   When the last byte that's pulled from the socket is a part of a Unicode codepoint, the app crashes when trying to decode. \\
+   Possible fix: Keep as byte array, and only decode to UTF-8 string after delimiting. Can I just delimit with "\r\n".encode("UTF-8")"?
 ** DONE Messages get split up. 
    This needs to be fixed ASAP, and probably should be part of proper IRC protocol hanlding.
 ** DONE Add proper IRC protocol message hanlding
