--- a/todo.org
+++ b/todo.org
@@ -4,12 +4,18 @@
    The dictionary holding the data for a channel will be deleted if the process is cancelled while saving the data. \\
    - Fixed, at least in Debian.
 
-* Interface [1/3]
-** TODO Store Markov data in a user-specified path, rather than in a directory with the project files.
+* Interface [2/4]
+** TODO Read options and such in from a config file.
+   The options should be the default save directory, the default server to connect to, and the default channel to connect to. Maybe instead of taking stuff as command line arguments, I can have users make a config file and just pass an argument pointing to it? Channel and dict name should probably stay arguments, though.
 ** TODO Make GUI interface [0/3]
 *** TODO Display multiple chat streams
 *** TODO Generate messages from a specific stream on command
 ** DONE Take channel and dict name as command line arguments
+** DONE Store Markov data in a user-specified path, rather than in a directory with the project files.
+   - <2017-03-23 Thu>: Done, but now I should probably get this from some kind of config file. That'll be a whole new item.
+
+* Markov [0/1]
+** TODO Use different symbols for the start and end of messages.
 
 * IRC [4/5]
 ** TODO Handle multiple chat streams at once
